--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 .page_contianer > div{
     width: min(100%, 430px);
-    height: 100dvh;
+    height: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
