--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    outline: 1px solid red;
 }
 .canvas_target{
     width: 100%;
@@ -655,7 +654,7 @@
 }
 .section_7 > section{
   position: absolute;
-  width: 80%;
+  width: 90%;
   height: 80%;
   top: 50%;
   left: 50%;
@@ -702,7 +701,7 @@
   border-bottom: 2px solid #9b5a01;
   margin: auto;
   color: #9b5a01;
-  font-size: 28px;
+  font-size: 25px;
   text-align: center;
 }
 .section_7--date_description{
@@ -720,10 +719,10 @@
   font-family: "Cormorant Infant", serif;
   font-weight: 600;
   font-style: normal;
-  font-size: 35px;
+  font-size: 30px;
 }
 .section_7--date_description > p:nth-child(2){
-  font-size: 40px;
+  font-size: 35px;
 }
 .section_7--see_map{
   width: fit-content;
@@ -736,6 +735,7 @@
   padding: 5px 7px;
   border: none;
   cursor: pointer;
+  z-index: 1;
 }
 .section_7--description_event{
   width: 100%;
@@ -914,7 +914,7 @@
 }
 .section_9 > section{
   position: absolute;
-  width: 80%;
+  width: 90%;
   height: 65%;
   top: 45%;
   left: 50%;
@@ -951,7 +951,7 @@
   font-family: "Cormorant Infant", serif;
   font-weight: 600;
   font-style: normal;
-  font-size: 28px;
+  font-size: 25px;
 }
 .section_9--medias{
   width: 100%;
@@ -965,7 +965,7 @@
   height: 100%;
   display: grid;
   margin: auto;
-  font-size: 28px;
+  font-size: 25px;
   place-items: center;
   color: #9b5a01;
   font-family: "Cormorant Infant", serif;
