--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(0.4); 
     animation: fadeInScale 8s ease-in-out forwards;   
-    width: 240px;
-    height: 240px;
+    width: 210px;
+    height: 210px;
     background: transparent;
 }
 .section_2--background_card{
@@ -210,8 +210,8 @@
 }
 .section_2-outer_circle{
   position: absolute;
-  width: 350px;
-  height: 350px;
+  width: 330px;
+  height: 330px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4);
@@ -238,8 +238,8 @@
 }
 .section_2-inner_circle{
   position: absolute;
-  width: 330px;
-  height: 330px;
+  width: 310px;
+  height: 310px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%)scale(0.4);
@@ -293,7 +293,7 @@
     }
     100% {
         opacity: 1;
-        top: 85%;
+        top: 88%;
     }
 }
 .section_3--recent_wedding{
@@ -346,12 +346,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.2) rotateZ(-30deg);
-  width: 330px;
-  height: 330px;
+  width: 290px;
+  height: 290px;
   animation-name: scaleImage;
   animation-duration: 5.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+  z-index: 1;
 }
 .first_square{
   position: absolute;
@@ -359,8 +360,8 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares 4.5s ease-in-out forwards;
-  width: 350px;
-  height: 350px;
+  width: 310px;
+  height: 310px;
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 70% ,white 76%,#cbac44 );
   border-image-slice: 1;
@@ -371,8 +372,8 @@
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares_rotate 5s ease-in-out forwards;
-  width: 350px;
-  height: 350px;
+  width: 310px;
+  height: 310px;
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 ,white 16%,#cbac44 25%);
   border-image-slice: 1;
@@ -387,6 +388,7 @@
 }
 .section_4 > canvas{
   opacity: 0;
+  z-index: 1;
 }
 .section_4 > img{
   opacity: 0;
@@ -499,21 +501,22 @@
 }
 .section_5 > canvas{
   opacity: 0;
+  z-index: 1;
 }
 .section_5 > img{
   opacity: 0;
 }
 .section_5 > div{
   position: absolute;
-  width: 80%;
-  height: 65%;
-  top: 50%;
+  width: 95%;
+  height: 80%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 30% 40% 30%;
-  color: transparent;
+  z-index: 2;
 }
 @keyframes fadeInScale_text_section5 {
   0% {
@@ -663,6 +666,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4,1fr);
   opacity: 0;
+  z-index: 1;
 }
 .scale_section_7{
   animation-name: scaleframe_section7;
@@ -728,7 +732,7 @@
   width: fit-content;
   height: fit-content;
   margin: auto;
-  font-size: 22px;
+  font-size: 20px;
   border-radius:  10px / 50%;
   background-color: rgb(89, 3, 89);
   color: white;
@@ -796,6 +800,7 @@
 }
 .section_8 > canvas{
   opacity: 0;
+  z-index: 2;
 }
 .section_8 > img{
   opacity: 0;
@@ -812,7 +817,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: -1;
+  z-index: 1;
 }
 .scale_section_8{
   animation-name: scaleframe_section8;
@@ -843,6 +848,7 @@
   color: #9b5a01;
   font-size: 28px;
   text-decoration: underline;
+  letter-spacing: 5px;
 }
 .section_8--container_description{
   width: fit-content;
@@ -859,7 +865,7 @@
   width: fit-content;
   height: fit-content;
   margin: auto;
-  font-size: 16px;
+  font-size: 20px;
   border-radius:  10px / 50%;
   background-color: rgb(89, 3, 89);
   color: white;
@@ -902,6 +908,7 @@
 }
 .section_9 > canvas{
   opacity: 0;
+  z-index: 1;
 }
 .section_9 > img{
   opacity: 0;
@@ -922,7 +929,8 @@
   display: grid;
   grid-template-columns: 1fr;
   opacity: 0;
-  grid-template-rows: 20% 30% 50%;
+  grid-template-rows: 10% 40% 50%;
+  z-index: 2;
 }
 .animate_section_9{
   animation-name: fade_section_9;
@@ -995,6 +1003,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 30% 50% 20%;
+  z-index: 1;
 }
 @keyframes scaletext_section10 {
   0% {
@@ -1057,7 +1066,7 @@
   width: fit-content;
   height: fit-content;
   margin: auto;
-  font-size: 16px;
+  font-size: 20px;
   border-radius:  10px / 50%;
   background-color: rgb(89, 3, 89);
   color: white;
@@ -1078,6 +1087,7 @@
 }
 .section_11 > canvas{
   opacity: 0;
+  z-index: 1;
 }
 .section_11 > img{
   opacity: 0;
