--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@
     }
     100% {
         opacity: 1;
-        top: 68%;
+        top: 75%;
     }
 }
 .section_3--recent_wedding{
@@ -399,22 +399,18 @@
 @keyframes scalePhrase {
   0% {
     transform: translate(-50%, -50%) scale(0.2); 
-    color: transparent;
     opacity: 0;
   }
 50%{
   transform: translate(-50%, -50%) scale(1.2); 
-  color: #9b5b0171;
   opacity: 0.25;
 }
 75%{
   transform: translate(-50%, -50%) scale(1.1); 
-  color: #9b5b0171;
   opacity: 0.75;
 }
 100% {
     transform: translate(-50%, -50%) scale(1); 
-    color: #9b5a01;
     opacity: 1;
   }
 }
@@ -708,19 +704,7 @@
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
 }
-.section_8--container_info_title{
-  width: fit-content;
-  height: fit-content;
-  margin-top: auto;
-  margin-inline:auto;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  color: #9b5a01;
-  font-size: 28px;
-  text-decoration: underline;
-  letter-spacing: 5px;
-}
+
 .section_8--container_description{
   width: fit-content;
   height: fit-content;
@@ -732,35 +716,7 @@
   font-size: 28px;
   text-align: center;
 }
-.section_8--container_info > button{
-  width: fit-content;
-  height: fit-content;
-  margin: auto;
-  font-size: 20px;
-  border-radius:  10px / 50%;
-  background-color: rgb(89, 3, 89);
-  color: white;
-  padding: 5px 7px;
-  border: none;
-}
-.section_8--clothes{
-  width: 90%;
-  height: 80%;
-  outline: 1px solid greenyellow;
-  margin: auto;
-  display: grid;
-}
-.section_8--clothes > p{
-  width: fit-content;
-  height: fit-content;
-  margin-inline:auto ;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  color: #9b5a01;
-  font-size: 28px;
-  text-decoration: underline;
-}
+
 .section_9{
   position: relative;
   background: url('fondo-arriba.svg');
@@ -779,7 +735,7 @@
 }
 .section_9 > canvas{
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
 }
 .section_9 > img{
   opacity: 0;
@@ -792,16 +748,16 @@
 }
 .section_9 > section{
   position: absolute;
-  width: 90%;
-  height: 65%;
-  top: 45%;
+  width: 80%;
+  height: 80%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  grid-template-columns: 1fr;
-  opacity: 0;
-  grid-template-rows: 10% 40% 50%;
-  z-index: 2;
+  transform: translate(-50%, -50%) scale(1);
+  outline: 2px solid #9b5a01;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
 .animate_section_9{
   animation-name: fade_section_9;
@@ -809,47 +765,36 @@
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
 }
-.section_9--title{
-  width: fit-content;
-  height: fit-content;
-  margin-top: auto;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  color: #9b5a01;
-  margin-inline: auto;
-  font-size: 30px;
-  text-decoration: underline;
-}
 .section_9--description{
-  width: 70%;
-  height: fit-content;
-  margin: auto;
-  text-align: center;
-  color: #9b5a01;
-  font-family: "Cormorant Infant", serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 25px;
-}
-.section_9--medias{
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+  border: 2px solid #9b5a01; 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3,1fr);
+  grid-template-rows: 70% 30%;
 }
-.section_9--medias > div{
-  width: 80%;
+.section_9--description > img{
+  width: 100%;
+  height: 95%;
+  object-fit: contain;
+}
+.section_9--description > div{
+  width: 100%;
   height: 100%;
-  display: grid;
-  margin: auto;
-  font-size: 25px;
-  place-items: center;
-  color: #9b5a01;
-  font-family: "Cormorant Infant", serif;
-  font-weight: 600;
-  font-style: normal;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+.section_9--description > div > button{
+  width: 120px;
+  height: 60px;
+  border-radius: 15px/50%;
+  background: url('./btn_place.svg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
 }
 .section_10{
   position: relative;
@@ -857,9 +802,11 @@
   background-size: 150%;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: -1;
 }
 .section_10 > canvas{
   opacity: 0;
+  z-index: 1;
 }
 .section_10 > img{
   opacity: 0;
@@ -875,6 +822,22 @@
   grid-template-columns: 1fr;
   grid-template-rows: 30% 50% 20%;
   z-index: 1;
+}
+.phrase_section_10{
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  background: url('dress.svg');
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(255, 99, 71, 0.181);
+  z-index: -1;
+  transform: translate(-50%, -50%) scale(0.4) ; 
+  animation: scalePhrase 3.8s linear forwards;
 }
 @keyframes scaletext_section10 {
   0% {
@@ -933,21 +896,7 @@
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
 }
-.btn_assist{
-  width: fit-content;
-  height: fit-content;
-  margin: auto;
-  font-size: 20px;
-  border-radius:  10px / 50%;
-  background-color: rgb(89, 3, 89);
-  color: white;
-  padding: 5px 7px;
-  border: none;
-  animation-name: scaletext_section10;
-  animation-duration: 2s; 
-  animation-timing-function: linear; 
-  animation-fill-mode: forwards;
-}
+
 .section_11{
   position: relative;
   background: url('fondo-arriba.svg');
@@ -958,63 +907,24 @@
 }
 .section_11 > canvas{
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
 }
 .section_11 > img{
   opacity: 0;
 }
-.section_11 > section{
-  position: absolute;
-  width: 80%;
-  height: 60%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.section_11--recent_wedding{
+  position:absolute;
   opacity: 0;
-}
-.section_11 > div {
-  position: absolute;
-  width: 230px;
+  width: 80%;
   height: 150px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.4);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  opacity: 0;
-}
-@keyframes scaletext_section11 {
-  0% {
-    opacity: 0;
-    transform:translate(-50%, -50%)  scale(0.4);
-  }
-  100% {
-    opacity: 1;
-    transform:translate(-50%, -50%)  scale(1);
-  }
-}
-.section_11--box_text{
-  animation-name: scaletext_section11;
-  animation-duration: 4s; 
+  transform: translate(-50%, -50%) ;
+  z-index: 5;
+  animation-name: fadeInText;
+  animation-duration: 2.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
-}
-.section_11 > div > p{
-  font-family: "Cormorant Infant", serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 22px;
-  color: #9b5a01;
-}
-.section_11 > div > h3{
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 30px;
-  color: #cbac44 ;
 }
 .img_bg_stain_1{
   position:absolute;
