--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@
 }
 .page_contianer{
     display: grid;
-    height: 1100vh;
+    height: 1400vh;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(11,1fr);
+    grid-template-rows: repeat(14,1fr);
 }
 .page_contianer > div{
     width: min(100%, 430px);
@@ -293,7 +293,7 @@
     }
     100% {
         opacity: 1;
-        top: 75%;
+        top: 80%;
     }
 }
 .section_3--recent_wedding{
@@ -925,6 +925,68 @@
   animation-duration: 2.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+}
+.section_12{
+  position: relative;
+  background: url('fondo-abajo.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.section_12 > canvas{
+  z-index: 1;
+}
+.section_12 > section{
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  outline: 2px solid #9b5a01;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section_12--description{
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+  border: 2px solid #9b5a01; 
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.section_12--description > p{
+  width: 250px;
+  height: 200px;
+  background: url('slider.svg');
+  background-position: center;
+  background-size: 50%;
+  background-repeat: no-repeat;
+}
+.section_13{
+  position: relative;
+  background: url('fondo-arriba.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.img_hours{
+  position: absolute;
+  width: 250px;
+  height: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  object-fit: contain;
+  z-index: 2;
+}
+.section_14{
+  position: relative;
+  background: url('fondo-abajo.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .img_bg_stain_1{
   position:absolute;
