--- a/styles.css
+++ b/styles.css
@@ -514,6 +514,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  opacity: 0;
 }
 .section_5--container_info{
   width: calc(100% - 6px);
@@ -527,6 +528,20 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 90%;
+}
+@keyframes scaleframe_section5 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.scale_section_5{
+  animation-name: scaleframe_section5;
+  animation-duration: 7.6s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
 
 .section_6{
@@ -987,6 +1002,80 @@
   background-size: 150%;
   background-repeat: no-repeat;
   background-position: center;
+}
+.section_14 > div{
+  z-index: 1;
+}
+.section_14 > canvas {
+  z-index: 2;
+}
+.section_14 > img{
+  z-index: 1;
+  opacity: 0;
+}
+.section_14-outer_circle{
+  position: absolute;
+  width: 330px;
+  height: 330px;
+  top: 37%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.4);
+  animation-name: scaleOuterCircle;
+  animation-duration: 1.5s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
+  border: 3px solid transparent;
+  border-radius: 50%;
+  background-image: linear-gradient(white,white)
+  ,linear-gradient(90deg,#9b5a01, #cbac44  );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  z-index: -1;
+}
+.section_14-inner_circle{
+  position: absolute;
+  width: 310px;
+  height: 310px;
+  top: 37%;
+  left: 50%;
+  transform: translate(-50%, -50%)scale(0.4);
+  animation-name: scaleInnerCircle;
+  animation-duration: 2.4s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-image: linear-gradient(white,white)
+  ,linear-gradient(90deg,#9b5a01, #cbac44  );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  z-index: -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@keyframes fadeInImg_14 {
+  0% {
+       opacity: 0;
+       top: 30%;
+     }
+     100% {
+         opacity: 1;
+         top: 60%;
+     }
+ }
+.section_14--img_invitation{
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 220px;
+  height: 70%;
+  object-fit: contain;
+  animation-name: fadeInImg_14;
+  animation-duration: 2.5s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
 .img_bg_stain_1{
   position:absolute;
