--- a/styles.css
+++ b/styles.css
@@ -774,6 +774,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  opacity: 0;
 }
 .animate_section_9{
   animation-name: fade_section_9;
