--- a/styles.css
+++ b/styles.css
@@ -294,7 +294,7 @@
     }
     100% {
         opacity: 1;
-        top: 80%;
+        top: 60%;
     }
 }
 .section_3--recent_wedding{
@@ -304,7 +304,7 @@
   height: 50px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) ;
+  transform: translate(-50%, -50%) scale(10);
   z-index: 5;
   animation-name: fadeInText;
   animation-duration: 2.5s; 
@@ -557,9 +557,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  outline: 1px solid black;
   width: 60%;
   height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section_6 > section > img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .section_6 > canvas{
   z-index: 2;
@@ -628,7 +635,7 @@
   margin-inline: auto;
   margin-bottom: auto;
   border-radius: 15px/50%;
-  background: url('./btn_place.svg');
+  background: url('./btn_bg.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -1070,8 +1077,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 220px;
-  height: 70%;
-  object-fit: contain;
+  height: 80%;
+  object-fit: covers;
   animation-name: fadeInImg_14;
   animation-duration: 2.5s; 
   animation-timing-function: linear; 
