--- a/styles.css
+++ b/styles.css
@@ -290,11 +290,9 @@
 @keyframes fadeInText {
  0% {
       opacity: 0;
-      top: 50%;
     }
     100% {
         opacity: 1;
-        top: 60%;
     }
 }
 .section_3--recent_wedding{
@@ -302,7 +300,7 @@
   opacity: 0;
   width: 80%;
   height: 50px;
-  top: 50%;
+  bottom: 25%;
   left: 50%;
   transform: translate(-50%, -50%) scale(10);
   z-index: 5;
@@ -344,7 +342,7 @@
 
 .img_wedding {
   position: absolute;
-  top: 38%;
+  top: 380px;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.2) rotateZ(-30deg);
   width: 290px;
@@ -357,7 +355,7 @@
 }
 .first_square{
   position: absolute;
-  top: 38%;
+  top: 380px;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares 4.5s ease-in-out forwards;
@@ -369,7 +367,7 @@
 }
 .second_square{
   position: absolute;
-  top: 38%;
+  top: 380px;
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares_rotate 5s ease-in-out forwards;
