--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,18 @@
     grid-template-rows: repeat(14,1fr);
 }
 .page_contianer > div{
-    width: min(100%, 430px);
+    width: min(430px , 100%);
     height: 100%;
     margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
 }
 .canvas_target{
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .section_1{
   position: relative;
@@ -152,11 +153,14 @@
     background-size: 150%;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: -5;
+    z-index: -2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .section_2 > canvas{
     opacity: 0;
-    z-index: 2;
+    z-index:3;
   }
   .section_2 > img{
     opacity: 0;
@@ -265,7 +269,9 @@
   background-size: 150%;
   background-repeat: no-repeat;
   background-position: center;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .section_3 > img{
   opacity: 0;
@@ -1070,11 +1076,11 @@
 }
 .img_bg_stain_1{
   position:absolute;
-  top: 3%;
+  top: 2%;
   right: 5%;
   width: 230px;
   height: 230px;
-  opacity: 0;
+  opacity: 0.8;
   animation-name: scaleStain;
   animation-duration: 1.5s; 
   animation-timing-function: linear; 
@@ -1082,11 +1088,11 @@
 }
 .img_bg_stain_2{
   position:absolute;
-  bottom: 3%;
+  bottom: 2%;
   left: 5%;
   width: 230px;
   height: 230px;
-  opacity: 0;
+  opacity: 0.8;
   animation-name: scaleStain;
   animation-duration: 1.5s; 
   animation-timing-function: linear; 
