--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@
     height: 100%;
     margin: auto;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .canvas_target{
     width: 100%;
