--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,16 @@
     box-sizing: border-box;
 }
 .page_contianer{
-    display: grid;
+    display: flex;
     height: 1400svh;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(14 , 10%);
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .page_contianer > div{
     width: min(430px , 100%);
-    height: 100%;
+    height: 100vh;
     margin: auto;
     overflow: hidden;
     display: flex;
@@ -1020,7 +1021,7 @@
   position: absolute;
   width: 330px;
   height: 330px;
-  top: 38%;
+  top: calc(50%  - 65px);
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4);
   animation-name: scaleOuterCircle;
@@ -1039,7 +1040,7 @@
   position: absolute;
   width: 310px;
   height: 310px;
-  top: 38%;
+  top: calc(50%  - 65px);
   left: 50%;
   transform: translate(-50%, -50%)scale(0.4);
   animation-name: scaleInnerCircle;
@@ -1067,7 +1068,7 @@
  }
 .section_14--img_invitation{
   position: absolute;
-  top: 60%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1.5);
   width: 220px;
