--- a/styles.css
+++ b/styles.css
@@ -960,22 +960,17 @@
   animation-fill-mode: forwards;
 }
 .section_12{
-  position: relative;
   background: url('fondo-abajo.svg');
   background-size: 200%;
   background-repeat: no-repeat;
   background-position: center;
-}
-.section_12 > canvas{
-  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .section_12 > section{
-  position: absolute;
   width: 80%;
-  height: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  height: 80%;  
   outline: 2px solid #9b5a01;
   display: flex;
   justify-content: center;
@@ -1105,10 +1100,72 @@
 }
 
 /* Carrusel */
-.section_12--description{
-  width: calc(100% - 6px);
-  height: calc(100% - 6px);
-  border: 2px solid #9b5a01; 
+
+
+.carousel {
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
+.carousel > ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.slide {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: 200ms opacity ease-in-out;
+  transition-delay: 200ms;
+}
+
+.slide > img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.slide[data-active] {
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0ms;
+}
+
+.carousel-button {
+  position: absolute;
+  height: 35px;
+  width: 35px;
+  z-index: 2;
+  background: none;
+  border: none;
+  font-size: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(255, 255, 255, .5);
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: rgb(0, 0, 0);
+}
+
+.carousel-button:hover,
+.carousel-button:focus {
+  color: white;
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.carousel-button:focus {
+  outline: 1px solid black;
+}
+
+.carousel-button.prev {
+  left: 1rem;
+}
+
+.carousel-button.next {
+  right: 1rem;
+}
