--- a/styles.css
+++ b/styles.css
@@ -634,15 +634,19 @@
   grid-template-rows: 70% 30%;
 }
 .section_7--container_info > img{
+  display: block;
   width: 100%;
   height:95%;
+  margin-left:10px;
+  transform: scale(1.7);
   object-fit: contain;
+  margin-top: 100px;
 }
 .section_7--container_info > button{
   width: 120px;
   height: 60px;
   margin-inline: auto;
-  margin-bottom: auto;
+  margin-top: 5%;
   border-radius: 15px/50%;
   background: url('./btn_bg.svg');
   background-position: center;
@@ -711,7 +715,7 @@
   margin-inline: auto;
   margin-bottom: auto;
   border-radius: 15px/50%;
-  background: url('./btn_place.svg');
+  background: url('./btn_bg.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -822,7 +826,7 @@
   width: 120px;
   height: 60px;
   border-radius: 15px/50%;
-  background: url('./btn_place.svg');
+  background: url('./btn_bg.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -1063,9 +1067,9 @@
  }
 .section_14--img_invitation{
   position: absolute;
-  top: 55%;
+  top: 60%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1.5);
+  transform: translate(-50%, -50%) scale(1.7);
   width: 220px;
   height: 90%;
   object-fit: covers;
