--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Great+Vibes&display=swap');
+@import url('https://fonts.cdnfonts.com/css/carneys-gallery-script-demo-ver');
 *{
     margin: 0;
     padding: 0;
@@ -47,7 +48,7 @@
   text-align: center;
   font-family: "Cormorant Infant", serif;
   font-weight: 300;
-  font-style: normal;
+  font-style: normal;  
 }
 .section_1--counter{
   width: 100%;
@@ -99,15 +100,21 @@
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  font-size: 18px;
-  font-family: "Great Vibes", cursive;
+  font-size: 10px;
+  font-family: 'Carneys Gallery Script Demo Ver', sans-serif;
   font-weight: 400;
   font-style: normal;
-  
+  padding-bottom: 10px;
+  padding-top: 10px; 
+}
+.section_1--background_circle > p:nth-child(2){
+  font-family: "Cormorant Infant", serif;
+  font-style: italic;
+  margin-top: 10px;
 }
 .circle_times_animation_1{
   position: absolute;
