--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@
   height: 60%;
   display: block;
   object-fit: cover;
+  overflow:visible;
 }
 .section_1--counter{
   width: 100%;
@@ -710,17 +711,17 @@
     opacity: 1;
   }
 }
-@keyframes scaleframe_section_frame8 {
+@keyframes scalecanvas_section_8 {
   0% {
-    transform: scale(0.5);
+    opacity: 0;
   }
-  
   100% {
-    transform:  scale(1);
+    opacity: 1;
   }
 }
 .section_8 > canvas{
   z-index: 1;
+  opacity: 0;
 }
 .section_8 > img{
   opacity: 0;
@@ -737,6 +738,7 @@
   grid-template-rows:  100%;
   z-index: 2;
   overflow: visible;
+  opacity: 0;
 }
 .section_8 > section > img{
   width: 100%;
@@ -768,29 +770,11 @@
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
 }
-.section_8--container_info{
-  width: calc(100% - 6px);
-  height: calc(100% - 6px);
-  border: 2px solid #9b5a01;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 25% 25% 10% 35%;
-  animation-name: scaleframe_section_frame8;
-  animation-duration: 2s; 
+.scale_section_8_canvas{
+  animation-name: scalecanvas_section_8;
+  animation-duration: 7.6s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
-}
-
-.section_8--container_description{
-  width: fit-content;
-  height: fit-content;
-  margin: auto;
-  color: #9b5a01;
-  font-family: "Cormorant Infant", serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 28px;
-  text-align: center;
 }
 
 .section_9{
