--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,11 @@
 }
 .section_1--card{
   position: absolute;
-  top: 70%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  height: 60%;
+  width: 100%;
+  height: 70%;
   display: block;
   object-fit: cover;
   overflow:visible;
@@ -696,7 +696,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 15px/50%;
-  background: url('./btn_bg.svg');
+  background: url('./boton-ver-mapa.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -776,7 +776,7 @@
   left: 48%;
   transform: translate(-50%, -50%) ;
   border-radius: 15px/50%;
-  background: url('./btn_bg.svg');
+  background: url('./boton-ver-mapa.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -1062,9 +1062,11 @@
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-direction: column;
 }
+
 .section_12 > section{
   width: 80%;
   height: 80%;  
@@ -1205,7 +1207,24 @@
   border: 2px solid #9b5a01;
   position: relative;
 }
-
+.carousel > img:nth-child(1) {
+  width: 100%;
+  position: absolute;
+  height: 80px;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+.carousel > img:nth-child(2) {
+  width: 100%;
+  position: absolute;
+  height: 80px;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(180deg);
+  z-index: 2;
+}
 .carousel > ul {
   margin: 0;
   padding: 0;
