--- a/styles.css
+++ b/styles.css
@@ -1311,3 +1311,14 @@
 .carousel-button.next {
   right: 1rem;
 }
+.testing_img{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  outline: 2px solid black;
+  opacity: 1 !important;
+}
