--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,10 @@
  }
 .canvas_section_3{
   opacity: 1;
-  
+  animation-name: fadeCanvas3;
+  animation-duration: 7s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
   z-index: 3;
 }
 @keyframes fadeInText {
@@ -1307,15 +1310,4 @@
 
 .carousel-button.next {
   right: 1rem;
-}
-.testing_img{
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  top: 70%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  outline: 2px solid black;
-  opacity: 1 !important;
 }
